--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,8 +6,8 @@
 <section>
     <ul>
         <label>Your Cart:</label>
-        <%# @cart.each do |item| %>
-            <li><%# item %></li>
-        <%# end %>
+        <% @cart.each do |item| %>
+            <li><%= item %></li>
+        <% end %>
     </ul>
 </section>
