--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,10 +3,11 @@
     <%= text_field_tag "product" %>
     <%= submit_tag "add to cart"%>
 <% end %>
+
 <section>
     <ul>
         <label>Your Cart:</label>
-        <% @cart.each do |item| %>
+        <% cart.each do |item| %>
             <li><%= item %></li>
         <% end %>
     </ul>
