--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,5 @@
-<%= @items %>
+<%= form_tag('/') do %>
+    <%= text_field_tag 'product' %>
+    <%= submit_tag 'add to cart' %>
+<% end %>
+<%= cart.join(" ")%>
